--- a/Proyectos_Django/TrainningApp/Market/templates/index.html
+++ b/Proyectos_Django/TrainningApp/Market/templates/index.html
@@ -5,7 +5,7 @@
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1"/>
 <meta name="author" content="Amardeep Kesharwani" />
-<title>Solo Market </title>
+<title>Market </title>
 <link href="../../static/style.css" rel="stylesheet" type ="text/css">
 <link href="https://fonts.googleapis.com/css?family=Muli&display=swap" rel="stylesheet">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
