--- a/Proyectos_Django/TrainningApp/Market/templates/index.html
+++ b/Proyectos_Django/TrainningApp/Market/templates/index.html
@@ -4,7 +4,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1"/>
-<meta name="author" content="Amardeep Kesharwani" />
+<meta name="author" content="Elkin Riascos" />
 <title>Market </title>
 <link href="../../static/style.css" rel="stylesheet" type ="text/css">
 <link href="https://fonts.googleapis.com/css?family=Muli&display=swap" rel="stylesheet">
